# NEAT-Sakana

./: .gitignore  README.md  pyproject.toml  requirements.txt
backprop_neat_jax/: README.md  pyproject.toml  requirements.txt
backprop_neat_jax/reports/: IMPLEMENTATION_NOTES.md
backprop_neat_jax/scripts/: run_all_tasks.sh
backprop_neat_jax/src/bp_neat_jax/: __init__.py  activations.py  cli.py  config.py  datasets.py  genome.py  report.py  species.py  trainer.py  viz.py
notebooks/: evojax_neat_both_runs.ipynb
reports/: IMPLEMENTATION_NOTES.md
scripts/: run_all.sh  run_evojax_neat_both.py
src/jax_neat_evojax/: __init__.py  activations.py  cli.py  config.py  evolution.py  genes.py  genome.py  innovation.py  reporting.py  species.py  visualization.py
src/jax_neat_evojax.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/jax_neat_evojax/envs/: __init__.py  slimevolley_env.py
